完善error增加原错误显示 筛选/获取vehicle列表新增判断条件 新增接口筛选/获取poi列表 修改数据库poi字段 type -> tybe 关键字重复
